--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- nav -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+      <a class="navbar-brand" href="#">Restaurant</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,6 +41,7 @@
     <input type="date" placeholder="Date of Birth" id="Date of Birth"><br><br>
     <input type="text" placeholder="Gender" id="Gender"><br><br>
     <input type="number" placeholder="Phone number" id="Phone number"><br><br>
+    <input type="email"  placeholder="Email" id="Email"><br><br>
     <br><br>
 
     <h3>Select your order:</h3>
